style header and first section

--- a/components/styles.css
+++ b/components/styles.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 body{
     height: 100vh;
@@ -9,8 +10,21 @@ body{
 }
 .contact-info{
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
-    align-items: center;
+    align-items: start;
     height: 10rem; 
     width: 100vw;
+    
+}
+.contact-info--subsection{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: end;
+    width: 50%;
+    gap: 2rem;
+}
+input{
+    width: 15rem;
 }
