--- a/components/styles.css
+++ b/components/styles.css
@@ -11,19 +11,12 @@ body{
 .contact-info{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: start;
+    justify-content: space-evenly;
+    align-items:flex-end;
+    align-self: baseline;
     height: 10rem; 
-    width: 100vw;
+    width: 40rem;
     
-}
-.contact-info--subsection{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: end;
-    width: 50%;
-    gap: 2rem;
 }
 input{
     width: 15rem;
